# UQEF

./: .gitignore  .vscode-ctags  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  create_env.sh  python_conda_requirements.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  setup_new.py
examples/: .gitignore  config.json  dill_problem.py  simple_example_find_bug.py  simple_example_testmodel.py  simple_example_testmodel2.py  simple_example_uqsim.py  simple_example_uqsim_config_file.py  simple_example_uqsim_restore.py  start_simple_example_testmodel.sh  start_simple_example_uqsim.sh  start_simple_example_uqsim_config_file.sh
research/sparce_space_integration/: Prog_Arch_inner_loop.pdf.xopp  Prog_Arch_outer_loop.pdf.xopp  UQEF_architecture_sparce_space_integration.pdf.xopp  uq_simulation_dist_param_studies.py  uq_simulation_p_q_order_studies.py
src/uqef/: UQsim.py  __init__.py
src/uqef/model/: Model.py  TestModel.py
src/uqef/nodes/: Nodes.py  transformations.py
src/uqef/schedule/: defs.py  heuristics.py
src/uqef/simulation/: EnsembleSimulation.py  McSimulation.py  Nodes.py  SaltelliSimulation.py  ScSimulation.py  Simulation.py  __init__.py
src/uqef/solver/: LinearSolver.py  MpiPoolSolver.py  MpiSolver.py  MpiSolverOld.py  ParallelSolver.py  Solver.py  SolverTimes.py  __init__.py
src/uqef/stat/: RuntimeStatistics.py  Statistics.py  TestModelStatistics.py  __init__.py
src/uqef/util/: TimeMeasurement.py
tests/: RuntimeSimModel.py  clean.sh  simple_runtime_opt_solver_tests.py  start_simple_runtime_opt_tests.sh
