[metadata]
name = uqef
version = 0.4
url=https://gitlab.lrz.de/tum-i05/software/UQEF
author = Florian Kuenzner
author_email = florian.kuenzner@tum.de
description = Framework for Efficient Uncertainty Qunatification
description-file = README.md
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = uncertainty qunatification
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    chaospy
    dill
    joblib
    matplotlib
    more_itertools
    mpi4py
    numpy
    scipy
    setuptools
    tabulate
zip_safe = False

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    uqef.tests*

[aliases]
test=pytest

[tool:pytest]
testpaths = doc/source src/uqef tests
addopts = --doctest-modules --doctest-glob='*.rst' --cov=src/uqef

